--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,19 @@
 [versions]
 spring = "6.1.13"
+spring-data = "3.3.4"
 spring-framework = "3.3.4"
 spring-dependency-managment = "1.1.6"
 junit-jupiter = "5.10.3"
+jakarta-servlet = "6.1.0"
 
 [libraries]
 
+spring-aop = { module = "org.springframework:spring-aop", version.ref = "spring" }
+spring-aspects = { module = "org.springframework:spring-aspects", version.ref = "spring" }
 spring-context = { module = "org.springframework:spring-context", version.ref = "spring" }
+spring-web = { module = "org.springframework:spring-web", version.ref = "spring" }
+spring-jpa = { module = "org.springframework.data:spring-data-jpa", version.ref = "spring-data" }
+jakarta-servlet = { module = "jakarta.servlet:jakarta.servlet-api", version.ref = "jakarta-servlet" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
 
 [plugins]
