Chane project name

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ org.gradle.jvmargs=-Xmx2G
 jdk_version=21
 
 ## Application info
-project_name=jfr
-group=com.github.sibmaks.spring
+project_name=spring-jfr
+group=com.github.sibmaks
 version=unspecified
