--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ jdk_version=21
 
 ## Application info
 project_name=spring-jfr
-group=com.github.sibmaks
+group=io.github.sibmaks
 version=unspecified
