--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,3 +40,8 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: app/build/libs/*.jar
+      - name: Publish package
+        run: ./gradlew publish --stacktrace
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
