--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,11 @@ org.gradle.jvmargs=-Xmx2G
 jdk_version=11
 
 ## Application info
-project_name=spring-jfr
-group=io.github.sibmaks
+project_name=agent
+group=io.github.sibmaks.spring-jfr
 version=unspecified
+
+## Organization
+git_path=sibmaks-spring-jfr/spring-jfr
+git_url=https://github.com/sibmaks-spring-jfr/spring-jfr
+git_organization_url=scm:git:ssh://github.com/sibmaks-spring-jfr
