--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 lombok = "1.18.34"
 
-spring-jfr-api = "0.0.21"
-spring = "5.3.37"
-spring-data = "2.7.18"
+spring-jfr-api = "0.0.22"
+spring = "4.3.10.RELEASE"
+spring-data = "1.5.3.RELEASE"
 junit-jupiter = "5.10.3"
 javax-servlet = "4.0.1"
 zaxxer-hikariCP = "4.0.3"
